--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, soluta!
+        Arezoo Dabaghi
     </p>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
     <script src="D:\Front\Section 1\Expremints\tamrin1\assets\materialize\js\materialize.js"></script>
